@@ -1,5 +1,8 @@
 2010-12-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
+	* m4/boost.m4: Sync with newest version of boost.m4 from
+	<https://github.com/tsuna/boost.m4>.
+
 	* m4/boost.m4: SVN copy from dlvhex/trunk.
 	* m4/doxygen.m4: Likewise.
 	* bootstrap.sh: Likewise.
